# zeiterfassung

./: Cargo.toml  LICENSE  README.md  index.html  zeiterfassung-684a714dc350e5d3.js
.github/workflows/: rust.yml
assets/: manifest.json  sw.js
src/: app.rs  gui.rs  lib.rs  main.rs  platform.rs  processing.rs
src/gui/: central_panel.rs  first_column.rs  outputs.rs  plots.rs  second_column.rs  third_column.rs  top_menu.rs
src/platform/: native.rs  web.rs
src/processing/: app_state.rs  example.md  logfile_parser.rs  parser.rs  processing_state.rs  project_type.rs  state.rs  task.rs  task_state.rs  timeframe.rs  timestamps.rs  zeit.rs
src/processing/zeit/: timeframe.rs
