[package]
name = "zeiterfassung"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
serde = { version = "1.0.183", features = ["derive"] }
serde_jsonc = "1.0.105"
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts",
    "persistence",
    "wgpu",
] }
rfd = "0.11.4"
reqwest = { version = "0.11.20", features = ["json"] }
regex = "1.9.5"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
pollster = "0.3.0"
env_logger = "0.10.0"

# wasm:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.37"
web-sys = {version="0.3.64", features=["console", "Document", "Element", "Event", "HtmlElement", "HtmlAnchorElement", "Node", "Window", "BlobPropertyBag", "Url"]}
js-sys = "0.3.64"
